# stack-exchange-backup

./: .gitignore  LICENSE  README.md  pyproject.toml  release.ps1  release.sh
assets/: demo.avif  demo.cast
requirements/: constraints.txt  dev.txt  prod.txt
resources/openapi/: openapi.yaml
resources/openapi/components/: response_wrapper.yaml
resources/openapi/components/schemas/: answer.yaml  badge_count.yaml  closed_details.yaml  collective.yaml  collective_external_link.yaml  collective_recommendation.yaml  comment.yaml  error.yaml  filter.yaml  migration_info.yaml  network_post.yaml  network_user.yaml  notice.yaml  original_question.yaml  question.yaml  related_site.yaml  shallow_user.yaml  site.yaml  styling.yaml
src/stackexchange/: _model_base.py  api.py  backup.py  model_extend.py
tests/: test_api.py  test_api_known_bugs.py  test_api_regressions.py  test_filters.py  test_model.py
